# cozy

./: .gitattributes  .gitignore  Arcadefile  Cargo.toml  Dockerfile  package.json  rust-toolchain.toml
.buildkite/: pipeline.yml
backend/: .env  .env.production  .env.staging  Cargo.toml  Dockerfile  Rocket.toml
backend/src/: main.rs  models.rs  routes.rs
resources/: 01_loading.lvl  10_main.lvl  99_empty.lvl
resources/animations/: A_FastRun.gltf  A_FastRun.gltf.0.lod  A_Idle.gltf  A_Idle.gltf.0.lod  A_Walk.gltf  A_Walk.gltf.0.lod
resources/animations/guy/: guy-idle.gltf  guy-idle.gltf.0.lod
resources/animations/player/: victory-dance.gltf  victory-dance.gltf.0.lod
resources/fonts/Black_Ops_One/: OFL.txt
resources/images/: qwantani_night_4k.hdr
resources/models/: C_Level.gltf  C_Level.gltf.0.lod  FarmingGame.blend
resources/models/CM_Fence/: CM_Fence.fbx
resources/models/Grass/: ColorPallete.jpg.astc  ColorPallete.jpg.ktx  ColorPallete.jpg.pvrtc  Grass_01.gltf  Grass_01.gltf.0.lod  Grass_02.gltf  Grass_02.gltf.0.lod  Grass_03.gltf  Grass_03.gltf.0.lod  Grass_04.gltf  Grass_04.gltf.0.lod
resources/models/HayBale/: HayBale.gltf  HayBale.gltf.0.lod  M_HayBale_Base_color_png.png.astc  M_HayBale_Base_color_png.png.ktx  M_HayBale_Base_color_png.png.pvrtc  M_HayBale_Metallic_png-M_HayBale_Roughness_png.png.astc  (+5 more)
resources/test/: bananinha.gltf  bananinha.gltf.0.lod
scripts/: archiver  builder  notify_discord.py  notify_slack.py  website
src/: main.rs
src/client/: audio_control.rs  browser.rs  camera.rs  checkpoint.rs  door.rs  generator.rs  grenade.rs  health.rs  interactable.rs  intro.rs  level.rs  lifecycle.rs  lift.rs  light.rs  lockdown.rs  mission_timer.rs  mod.rs  oxygen.rs  particle.rs  pickup.rs  platform.rs  scoring.rs  shooting.rs  spawn.rs  ui_dialog.rs  ui_gun.rs  ui_health.rs  ui_interactable.rs  ui_intro.rs  ui_megapops.rs  ui_respawn.rs  ui_reticle.rs  ui_tutorial.rs
src/planners/: idling.rs  life.rs  mod.rs  social.rs
src/server/: mod.rs  network_controller.rs
src/shared/: animations.rs  collision.rs  components.rs  game_input.rs  inputs.rs  loading.rs  mod.rs  pickups.rs  state_machine.rs  tileset.rs  timeofday.rs  ui_components.rs
website/: config-overrides.js  package-lock.json  package.json  tsconfig.json
website/public/: index.html
website/src/: emotion.d.ts  index.css  index.tsx  platform-detect.d.ts  types.ts
(+535 files in other folders)
