[package]
name = "cozy"
description = ""
version = "0.1.0"
authors = [
  "Felipe Rocha <felipe@ultimate.games>",
  "Dalton Tiepolo <dalton@ultimate.games>",
  "Jacob Sosa <jacob@ultimate.games>",
  "Patrick Branigan <patrick@ultimate.games>",
  "Pedro Pereira <pedro@ultimate.games>",
  "Ricardo Cruz Silva <ricardo@ultimate.games>",
]
categories = ["wasm"]
readme = "README.md"
edition = "2021"

[features]
client-side-only = []
debug-bullets = []
default = []
production = ["engine/use-browser"]

[lib]
name = "cozy"
path = "src/main.rs"
crate-type = ["cdylib"]

[[bin]]
name = "cozy"
path = "src/main.rs"

[profile.dev.package.rapier3d]
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[dependencies]
engine = { path = "../../engine", features = [
#engine = { version = "=0.4.253", features = [
  "new-input",
  "disjoint-timer",
  #"enable-physics-debugging",
  "brotli",
  "fast-physics",
  #"debug-goap",
  #"physics-networking",
  #"fake-tilesets",
], registry = "ultimate-shared" }

#tagged = { path = "../../tagged" }
tagged = { version = "0.1.36", registry = "ultimate-shared" }

log = "0.4.6"
fix-hidden-lifetime-bug = "0.2.4"
uuid = { version = "1.4.0", features = ["serde", "v4", "js"] }
async-trait = "0.1.13"
serde = { version = "1.0.124", features = ["derive"] }
rand = "0.8.5"
bitflags = { version = "2.9.0", features = ["serde"] }
kahuna = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.18.2", default-features = false, features = [
  "io-util",
  "rt",
  "time",
  "fs",
  "macros",
  "net",
  "tracing",
] }
env_logger = "0.8"
dotenv = "0.15.0"
num_cpus = "1.13.1"
chrono = "0.4.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = "0.1"
num_cpus = "1.13.1"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.31"
