[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
admin = { version = "0.1.6", registry = "ultimate-shared" }
#admin = { path = "../../../admin" }
chrono = "0.4.39"

dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_cors = "0.6.0"
tonic = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
